--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,11 +2,7 @@
   <!-- Background Elements -->
   <div class="hero__background">
     <video
-      autoplay
-      muted
-      loop
-      playsinline
-      preload="auto"
+      #heroVideo
       class="hero__video"
       autoplay
       muted
@@ -14,7 +10,7 @@
       playsinline
       preload="auto"
     >
-      <source src="/sponsors/Corramos_Banner_Web_1.mp4" type="video/mp4" />
+      <source src="sponsors/Corramos_Banner_Web_1_FINAL.mp4" type="video/mp4" />
     </video>
   </div>
   <div class="hero__pattern"></div>
