--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -20,6 +20,11 @@
     object-fit: cover;
 
     filter: grayscale(100%);
+
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
     transform: scale(1.05);
   }
 
