apoyan section was fixed

--- a/src/app/components/partners/partners.html
+++ b/src/app/components/partners/partners.html
@@ -14,12 +14,49 @@
     <!-- APOYAN -->
     <h2 class="partners__title partners__title--spaced">Apoyan</h2>
 
-    <div class="partners__grid">
-      <img src="/sponsors/electrolit.png" alt="Electrolit" />
-      <img src="/sponsors/xpedition.png" alt="Xpedition" />
-      <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-      <img src="/sponsors/logo-mauricio.png" alt="Mauricio" />
-      <img src="/sponsors/Maxforce.png" alt="MaxForce" />
+    <div class="partners__carousel">
+      <div class="partners__track">
+        <!-- LOGOS -->
+        <img src="/sponsors/electrolit.png" alt="Electrolit" />
+        <img src="/sponsors/xpedition.png" alt="Xpedition" />
+        <img src="/sponsors/Pergolero.png" alt="Pergolero" />
+        <img
+          src="/sponsors/logo-mauricio.png"
+          style="max-width: 4rem"
+          alt="Mauricio"
+        />
+        <img
+          src="/sponsors/Maxforce.png"
+          style="max-width: 4rem"
+          alt="MaxForce"
+        />
+        <img src="/sponsors/LOGO-24C.png" style="max-width: 6rem" alt="24C" />
+        <img
+          src="/sponsors/Rediseño-Logo-Noticias-La-Unión-Alta-blanco.png"
+          alt="Noticias La Unión"
+          style="max-width: 4rem"
+        />
+
+        <img src="/sponsors/electrolit.png" alt="Electrolit" />
+        <img src="/sponsors/xpedition.png" alt="Xpedition" />
+        <img src="/sponsors/Pergolero.png" alt="Pergolero" />
+        <img
+          src="/sponsors/logo-mauricio.png"
+          style="max-width: 4rem"
+          alt="Mauricio"
+        />
+        <img
+          src="/sponsors/Maxforce.png"
+          style="max-width: 4rem"
+          alt="MaxForce"
+        />
+        <img src="/sponsors/LOGO-24C.png" style="max-width: 6rem" alt="24C" />
+        <img
+          src="/sponsors/Rediseño-Logo-Noticias-La-Unión-Alta-blanco.png"
+          alt="Noticias La Unión"
+          style="max-width: 4rem"
+        />
+      </div>
     </div>
   </div>
 </section>
