--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -213,7 +213,6 @@
   }
 
   &__file-input {
-    // Lo ocultamos visualmente pero sigue siendo funcional
     position: absolute;
     width: 0.1px;
     height: 0.1px;
@@ -386,7 +385,7 @@
     top: 100%;
     left: 0;
     font-size: 0.75rem;
-    color: $primary-600;
+    color: $danger-500;
     font-weight: 500;
     line-height: 1.2;
     margin-top: 4px;
